--- a/data/objects/spaceships.toml
+++ b/data/objects/spaceships.toml
@@ -19,7 +19,7 @@ health = 125.0
 colliderRadius = 100.0
 maxWeaponCapacity = 1.0
 cost = [["COMMON_ORE", 10.0], ["UNCOMMON_ORE", 10.0]]
-onDeathFunction = "projectileExplosion"
+onDeathScript = "projectileExplosion.lua"
 extraInfo = "Explodes into many projectiles on death"
 
 [DESTROYER]
