added more lua bindings and switched beam laser animations to a lua script

--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -408,4 +408,7 @@
     <ClCompile Include="src\gamepch.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="data\scripts\laserAnimation.lua" />
+  </ItemGroup>
 </Project>
