moved projectile on death functions to lua scripts and added the black hole gun and fixed a crash

--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -410,5 +410,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="data\scripts\laserAnimation.lua" />
+    <None Include="data\scripts\smallExplosion.lua" />
+    <None Include="data\scripts\largeExplosion.lua" />
+    <None Include="data\scripts\laserRing.lua" />
+    <None Include="data\scripts\lightningAOE.lua" />
+    <None Include="data\scripts\knockAll.lua" />
+    <None Include="data\scripts\blackHole.lua" />
   </ItemGroup>
 </Project>
