made the debug console remember its contents when after closing it, and moved laser animations to effectsemitter

--- a/data/objects/weapons.toml
+++ b/data/objects/weapons.toml
@@ -91,7 +91,7 @@ cost = [["COMMON_ORE", 50.0]]
 projectile = "BEAM_LASER"
 sound = "data/sound/pew1.wav"
 cooldownRecovery = 0.25
-fireAnimationScript = "laserAnimation.lua"
+fireAnimation = "beamLaser"
 instaHit = true
 
 [BLACK_HOLE_GUN]
