--- a/data/objects/projectiles.toml
+++ b/data/objects/projectiles.toml
@@ -104,3 +104,8 @@ life = 600.0
 damage = 80.0
 speed = 5.0
 onDeathScript = "blackHole.lua"
+
+[GATLING]
+life = 1000.0
+speed = 10.0
+damage = 20.0
