--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -416,5 +416,6 @@
     <None Include="data\scripts\lightningAOE.lua" />
     <None Include="data\scripts\knockAll.lua" />
     <None Include="data\scripts\blackHole.lua" />
+    <None Include="data\shaders\parallaxshader.shader" />
   </ItemGroup>
 </Project>
