--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -420,5 +420,6 @@
     <None Include="data\scripts\blackHole.lua" />
     <None Include="data\shaders\parallaxshader.shader" />
     <None Include="data\shaders\lightning.shader" />
+    <None Include="data\shaders\jumpshader.shader" />
   </ItemGroup>
 </Project>
