new shader for jump points and jump point trails

--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -421,5 +421,7 @@
     <None Include="data\shaders\parallaxshader.shader" />
     <None Include="data\shaders\lightning.shader" />
     <None Include="data\shaders\jumpshader.shader" />
+    <None Include="data\shaders\jumppointshader.shader" />
+    <None Include="data\shaders\jumptrailshader.shader" />
   </ItemGroup>
 </Project>
