added a soft population limit to colonies that can be increased by buildings, and added an info tooltip to the colony growth label

--- a/data/objects/colonybuildingeffectstext.toml
+++ b/data/objects/colonybuildingeffectstext.toml
@@ -12,3 +12,6 @@ busSpawnTimeMultiplier = "Space Bus time to spawn"
 [FLAGS]
 ENABLE_ORBITAL_CANNON = "Enables orbital cannon"
 ENABLE_EXPLORATION_EVENTS = "Enables exploration events"
+
+[ADDERS]
+addsPopulationLimit = "Increases population capacity by"
