particle system overhaul and added thruster particles to ships

--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -423,5 +423,6 @@
     <None Include="data\shaders\jumpshader.shader" />
     <None Include="data\shaders\jumppointshader.shader" />
     <None Include="data\shaders\jumptrailshader.shader" />
+    <None Include="data\shaders\particleshader.shader" />
   </ItemGroup>
 </Project>
