--- a/data/objects/projectiles.toml
+++ b/data/objects/projectiles.toml
@@ -13,7 +13,7 @@ damage = 25.0
 speed = 10.0
 
 [LIGHT_BALLISTIC]
-texturePath = "data/art/bullet.png"
+texturePath = "data/art/bullet2.png"
 damage = 1.0
 life = 100.0
 speed = 15.0
