overhauled science labs, they now consume resources but you can pick which resource to consume

--- a/data/objects/resources.toml
+++ b/data/objects/resources.toml
@@ -1,8 +1,11 @@
 [COMMON_ORE]
 name = "Kathium"
+researchMultiplier = 0.5
 
 [UNCOMMON_ORE]
 name = "Oscillite"
+researchMultiplier = 1.0
 
 [RARE_ORE]
 name = "Valkrosium"
+researchMultiplier = 2.0
