mining beams have a different color, you can select asteroids, and other stuff

--- a/data/objects/weapons.toml
+++ b/data/objects/weapons.toml
@@ -33,7 +33,7 @@ instaHit = true
 projectile = "MINING_LASER"
 findable = false
 hasDesign = false
-fireAnimation = "CONSTRUCTION_BEAM"
+fireAnimation = "MINING_BEAM"
 instaHit = true
 
 [ROCKET_LAUNCHER]
